--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,12 @@
         <androidx.legacy.widget.Space android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_weight="99.0" />
         <RelativeLayout android:id="@id/layoutPlay" android:layout_width="190.0dip" android:layout_height="51.0dip">
             <ImageView android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/main_btn" android:scaleType="fitCenter" android:contentDescription="@null" />
-            <TextView android:textSize="19.0sp" android:textColor="#ff52f9ff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/main_play" android:layout_centerInParent="true" android:fontFamily="@font/usuzi_0" />
+            <TextView android:textSize="19.0sp" android:textColor="#FFFFFF" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/main_play" android:layout_centerInParent="true" android:fontFamily="@font/usuzi_0" />
         </RelativeLayout>
         <androidx.legacy.widget.Space android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_weight="30.0" />
         <RelativeLayout android:id="@id/layoutPreset" android:layout_width="190.0dip" android:layout_height="51.0dip">
             <ImageView android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/main_btn" android:scaleType="fitCenter" android:contentDescription="@null" />
-            <TextView android:textSize="19.0sp" android:textColor="#ff52f9ff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/main_preset" android:layout_centerInParent="true" android:fontFamily="@font/usuzi_0" />
+            <TextView android:textSize="19.0sp" android:textColor="#FFFFFF" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/main_preset" android:layout_centerInParent="true" android:fontFamily="@font/usuzi_0" />
         </RelativeLayout>
         <TextView android:textSize="8.0sp" android:textColor="#ffffffff" android:layout_gravity="center_horizontal" android:id="@id/policy" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/privacy" />
         <androidx.legacy.widget.Space android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_weight="99.0" />
