--- a/app/src/main/res/drawable/smart_btn_install.xml
+++ b/app/src/main/res/drawable/smart_btn_install.xml
@@ -2,5 +2,5 @@
 <shape
   xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="3.0dip" />
-    <solid android:color="#ff50d32d" />
+    <solid android:color="#3bdf42" />
 </shape>
